# feather-example-project

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  example.fproj
src/: defs.h  extension.cpp  project_main.cpp
